<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.android.udacity.project.bakingapp.RecipeInfoActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimaryAlternative"
            android:paddingHorizontal="5dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:text="@string/ingredients"
            android:textSize="40sp"
            tools:text="Ingredients" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="@+id/btn_ingredients"
            android:layout_alignParentTop="@+id/btn_ingredients"
            android:layout_below="@+id/btn_ingredients"
            android:layout_marginHorizontal="15dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ingredients"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginVertical="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_recipe_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="15dp" />

            </ScrollView>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
